# latebit-studio-vscode

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  todo  tsconfig.json
cmake/: FetchEngine.cmake
lib/player/: CMakeLists.txt  README.md  main.cpp
lib/player/src/: piano.cpp  piano.h  player.cpp  wrappers.h
lib/renderer/: CMakeLists.txt  README.md  main.cpp
lib/renderer/src/: wrappers.cpp  wrappers.h
player/: CMakeLists.txt  main.cpp
player/cmake/: FetchSid.cmake
player/src/: piano.h  player.cpp  player.h  wrappers.cpp  wrappers.h
src/: audio.ts  constants.ts  index.ts  ipc.ts  sprites.ts  utils.ts
src/launcher/: build.command.ts  build.ts  cmake.ts  config.command.ts  config.ts  debug.command.ts  index.ts  task-provider.ts  types.ts  utils.ts
views/: audio.html  common.css  ipc.js  reset.css  sprites.html
views/audio/: app.js  constants.js  index.html  ipc.js  player.js  sid.d.ts  sid.js  state.js  style.css
views/audio/components/: edit.js  editor.js  metadata.js  playback.js  sound.js
views/sprites/: app.js  constants.js  frame.js  index.html  renderer.d.ts  renderer.js  state.js  style.css
views/sprites/components/: editor.js  frame.js  metadata.js  playback.js  timeline.js  tools.js
